--- a/responsive.css
+++ b/responsive.css
@@ -190,6 +190,30 @@
           .button > a{
             padding: 1rem;
           }
+           /* ...............................portfolio page................................. */
+           .portfolio_container{
+            flex-direction: column;
+             align-items: center;
+            
+             
+           }
+         .portfolio_blocks > img {
+             width: auto;
+            
+         }
+         /* ...............................services page................................. */
+         .services_container{
+            margin: 3rem 2.4rem;
+         }
+         .services_block{
+           flex-direction: column;
+           align-items: center;
+            gap: 2rem;
+            
+          }
+        .services_dropdown{
+            margin: 3rem 2.4rem;
+        }
 
 }
 @media (min-width: 576px) and (max-width: 767px){
@@ -309,6 +333,30 @@
       .msg > textarea{
         width: 100%;
       }
+       /* ...............................portfolio page................................. */
+       .portfolio_container{
+        flex-direction: column;
+         align-items: center;
+        
+         
+       }
+     .portfolio_blocks > img {
+         width: auto;
+        
+     }
+     /* ...............................services page................................. */
+     .services_container{
+        margin: 3rem 2.4rem;
+     }
+     .services_block{
+       flex-direction: column;
+       align-items: center;
+        gap: 2rem;
+        
+      }
+    .services_dropdown{
+        margin: 3rem 2.4rem;
+    }
 }
 
 @media (min-width: 767px) and (max-width: 992px){
@@ -370,6 +418,24 @@
       .blog_heading{
         padding: 3rem 0;
       }
+        /* ...............................portfolio page................................. */
+        .portfolio_blocks > img {
+            width: 19rem;
+        }
+     /* ...............................services page................................. */
+     .services_container{
+        margin: 3rem 2.4rem;
+     }
+     .services_block{
+       flex-direction: column;
+       align-items: center;
+        gap: 2rem;
+        
+      }
+    .services_dropdown{
+        margin: 3rem 2.4rem;
+    }
+     
 }
 
 
@@ -448,5 +514,10 @@
         text-overflow: ellipsis;
        
       }
-     
+       /* ...............................portfolio page................................. */
+      .portfolio_blocks > img {
+        width: 19rem;
+    }
+    /* ...............................services page................................. */
+
 }  
